# sih_ps_rag

./: .gitignore  README.md
frontend/src/: App.jsx
server/: create_database.py  create_embeddings.py  main.py  pyproject.toml  requirements.txt  sih_ps.db
server/chroma_db/: chroma.sqlite3
